--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                 </ul>
             </div>
         </nav>
-        <div id="para4">
-            <h1 id="name">CYBORG</h1>
-            <p id="para5">You can make all your cybotic dreams come true if you think it</p>
+        <div class="background">
+            <div id="para4">
+                <h1 id="name">CYBORG</h1>
+                <p id="para5">You can make all your cybotic dreams come true if you think it</p>
+            </div>
         </div>
     </header>
     <main>
